<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_fragment_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_marginBottom="5dp"
                android:id="@+id/tv_add_type_fragment_setting"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/add_type" />
            <TextView
                android:layout_marginBottom="5dp"
                android:id="@+id/tv_out_excel_fragment_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/out_excel" />
            <TextView
                android:id="@+id/tv_theme_fragment_setting"
                android:text="@string/theme"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>