<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sign_up_logo"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            />
    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:fitsSystemWindows="true"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="56dp"
            >

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:src="@drawable/logo"/>


            <!--邮箱-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextTheme"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_up_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_mail"
                    android:textSize="13sp"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <!--手机号码-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextTheme"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_up_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_phone"
                    android:maxLength="11"
                    android:textSize="13sp"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <!--密码-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextTheme"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_up_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_password"
                    android:inputType="textPassword"
                    android:textSize="13sp"
                    />
            </android.support.design.widget.TextInputLayout>

            <!--重复密码-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextTheme"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_up_re_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_rePassword"
                    android:inputType="textPassword"
                    android:textSize="13sp"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/sign_up_register"
                android:textSize="13sp"
                android:textColor="@android:color/white"
                />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_link_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/sign_up_linkSignIn"
                android:textSize="12sp"
                />

        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>